--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 [Rr]eleases/
 [Bb]in/
 [Oo]bj/
+artifacts/
 
-# Visual Studio 2015/2017 cache/options directory
+# Visual Studio cache/options directory
 .vs/
